//
// PROJECT:         Aspia Remote Desktop
// FILE:            proto/file_transfer_session_message.proto
// LICENSE:         See top-level directory
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

message DriveListItem
{
    enum Type
    {
        UNKNOWN        = 0;
        CDROM          = 1;
        REMOVABLE      = 2;
        FIXED          = 3;
        REMOTE         = 4;
        RAM            = 5;
        DESKTOP_FOLDER = 6;
    }

    Type type   = 1;
    string filesystem = 2;
    string volume_name = 3;
    string path = 4;
    uint64 total_space = 5;
    uint64 free_space = 6;
}

message DriveList
{
    repeated DriveListItem item = 1;
}

message DriveListRequest
{
    uint32 dummy = 1;
}

message DirectoryListItem
{
    enum Type
    {
        UNKNOWN   = 0;
        DIRECTORY = 1;
        FILE      = 2;
    }

    Type type   = 1;
    string name = 2;
    uint64 size = 3;
}

message DirectoryList
{
    string path = 1;
    repeated DirectoryListItem item = 2;
}

message DirectoryListRequest
{
    string path = 1;
}

message File
{
    enum Flags
    {
         UNKNOWN_PACKET   = 0;
         FIRST_PACKET     = 1;
         PARTITION_PACKET = 2;
         LAST_PACKET      = 4;
    }

    string path  = 1;
    uint32 flags = 2;
    bytes data   = 3;
}

message FileRequest
{
    string path = 1;
}
